--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -20,7 +20,14 @@
     </modules>
     <!--REPOSITORIES#########################################################-->
     <repositories>
-        
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>http://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
     </repositories>
     <!--PROPERTIES###########################################################-->
     <properties>
@@ -29,9 +36,10 @@
         <java.version>1.7</java.version>
         <javax.version>6.0</javax.version>
         <slf4j.version>1.7.5</slf4j.version>
-        <postgresql.version>8.4-702.jdbc4</postgresql.version>
-        <spring.version>3.1.3.RELEASE</spring.version>        
-        <hibernate.version>4.2.3.Final</hibernate.version>
+        <postgresql.version>9.1-901-1.jdbc4</postgresql.version>
+        <spring.version>3.2.7.RELEASE</spring.version>  
+        <spring.security>3.2.0.RELEASE</spring.security>      
+        <hibernate.version>4.2.7.SP1</hibernate.version>
     </properties>
     <!--DEPENDENCIES#########################################################-->
     <dependencies>
@@ -40,7 +48,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>0.12.0</version>
+            <version>1.12.2</version>
         </dependency>
         
         <!--Logging -->
@@ -119,12 +127,6 @@
             <version>${spring.version}</version>
         </dependency>
         
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-asm</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-
     </dependencies>
     
     <!--OPTIONAL DEPENDENCIES################################################-->
@@ -143,13 +145,13 @@
             <dependency>
                 <groupId>com.thetransactioncompany</groupId>
                 <artifactId>cors-filter</artifactId>
-                <version>1.7.1</version>
+                <version>1.8</version>
             </dependency>
             
             <!--Spring web-->
             <dependency>
                 <groupId>org.springframework</groupId>
-                <artifactId>spring-web</artifactId>
+                <artifactId>spring-webmvc</artifactId>
                 <version>${spring.version}</version>
             </dependency>
             
@@ -157,19 +159,19 @@
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-core</artifactId>
-                <version>${spring.version}</version>
+                <version>${spring.security}</version>
             </dependency>
             
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-config</artifactId>
-                <version>${spring.version}</version>
+                <version>${spring.security}</version>
             </dependency>
             
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-web</artifactId>
-                <version>${spring.version}</version>
+                <version>${spring.security}</version>
             </dependency>
             
             <dependency>
@@ -182,20 +184,20 @@
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-rest-webmvc</artifactId>
-                <version>1.0.0.RELEASE</version>
+                <version>2.0.0.M1</version>
             </dependency> 
             
             <!--Spring data JPA-->
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-jpa</artifactId>
-                <version>1.3.4.RELEASE</version>
+                <version>1.4.3.RELEASE</version>
             </dependency>
             
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-commons</artifactId>
-                <version>1.5.2.RELEASE</version>
+                <version>1.7.0.M1</version>
             </dependency>
             
             <dependency>
@@ -241,28 +243,28 @@
             <dependency>
                 <groupId>org.apache.tomcat</groupId>
                 <artifactId>tomcat-jdbc</artifactId>
-                <version>7.0.42</version>
+                <version>7.0.47</version>
             </dependency>
             
             <dependency>
                 <groupId>org.apache.tomcat</groupId>
                 <artifactId>tomcat-juli</artifactId>
-                <version>7.0.42</version>
+                <version>7.0.47</version>
                 <scope>compile</scope>
             </dependency>
             
             <dependency>
                 <groupId>org.hsqldb</groupId>
                 <artifactId>hsqldb</artifactId>
-                <version>2.3.0</version>
+                <version>2.3.1</version>
                 <scope>test</scope>
             </dependency>
             
-            <!--Other-->
+            <!--Test-->
             <dependency>
                 <groupId>com.jayway.restassured</groupId>
                 <artifactId>rest-assured</artifactId>
-                <version>1.8.1</version>
+                <version>2.0.1</version>
                 <scope>test</scope>
             </dependency>
             
@@ -285,7 +287,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.15</version>
+                <version>2.16</version>
                 <configuration>
                     <includes>
                         <include>**/*IT*.java</include>
