--- a/portal/vehtrack-web/pom.xml
+++ b/portal/vehtrack-web/pom.xml
@@ -34,7 +34,7 @@
         <!--Spring web-->
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <artifactId>spring-webmvc</artifactId>
         </dependency>
         
         <dependency>
@@ -87,7 +87,7 @@
                 <version>0.9.14</version>
                 <configuration>
                     <lookInside>true</lookInside>
-                    <tomcatVersion>7.0.42</tomcatVersion>
+                    <tomcatVersion>7.0.50</tomcatVersion>
                     <tomcatHttpPort>10000</tomcatHttpPort>
                     <contextPath>/</contextPath>
                     <deleteDefaultTomcatWebapps>true</deleteDefaultTomcatWebapps>                    
