continued work on data generator

--- a/portal/vehtrack-web/src/test/resources/log4j.properties
+++ b/portal/vehtrack-web/src/test/resources/log4j.properties
@@ -9,4 +9,4 @@ log4j.rootLogger=WARN, stdout
 
 # Detailed log levels
 log4j.logger.org.springframework.data=DEBUG
-#log4j.logger.org.springframework.jdbc=DEBUG
+log4j.logger.com.rhcloud.application.vehtrack=DEBUG
