--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -268,6 +268,18 @@
                 <scope>test</scope>
             </dependency>
             
+            <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-xml</artifactId>
+                <version>2.3.0</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.codehaus.woodstox</groupId>
+                <artifactId>woodstox-core-asl</artifactId>
+                <version>4.2.0</version>
+            </dependency>
+            
         </dependencies>
     </dependencyManagement>
     
