--- a/portal/vehtrack-web/pom.xml
+++ b/portal/vehtrack-web/pom.xml
@@ -76,6 +76,16 @@
             <artifactId>rest-assured</artifactId>
         </dependency>
         
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>
+        
+        <dependency>
+                <groupId>org.codehaus.woodstox</groupId>
+                <artifactId>woodstox-core-asl</artifactId>
+        </dependency>
+        
     </dependencies>
     
     <!--BUILD################################################################-->
